--- a/layouts/page/contact.html
+++ b/layouts/page/contact.html
@@ -347,7 +347,7 @@
                         Thank you for your message! I'll get back to you within 24 hours.
                     </div>
 
-                    <form action="https://formspree.io/f/xknlkddr" method="POST">
+                    <form action="https://formspree.io/f/xldndzzb" method="POST">
                         <div class="form-row">
                             <div class="form-group">
                                 <label for="name">Name *</label>
