--- a/layouts/page/contact.html
+++ b/layouts/page/contact.html
@@ -347,7 +347,8 @@
                         Thank you for your message! I'll get back to you within 24 hours.
                     </div>
 
-                    <form action="https://formspree.io/f/xldndzzb" method="POST">
+                    <!-- Netlify Forms -->
+                    <form name="contact" method="POST" netlify>
                         <div class="form-row">
                             <div class="form-group">
                                 <label for="name">Name *</label>
@@ -355,7 +356,7 @@
                             </div>
                             <div class="form-group">
                                 <label for="email">Email *</label>
-                                <input type="email" id="email" name="_replyto" required>
+                                <input type="email" id="email" name="email" required>
                             </div>
                         </div>
 
@@ -366,15 +367,13 @@
 
                         <div class="form-group">
                             <label for="subject">Subject *</label>
-                            <input type="text" id="subject" name="_subject" required>
+                            <input type="text" id="subject" name="subject" required>
                         </div>
 
                         <div class="form-group">
                             <label for="message">Message *</label>
                             <textarea id="message" name="message" placeholder="Please describe your project and how I can help..." required></textarea>
                         </div>
-
-                        <input type="hidden" name="_next" value="https://businesspage25.netlify.app/contact/?success=true">
 
                         <button type="submit" class="submit-btn">Send Message</button>
                     </form>
