--- a/layouts/page/services.html
+++ b/layouts/page/services.html
@@ -298,6 +298,7 @@
             </div>
             <ul class="nav-menu">
                 <li><a href="/services/" class="active">Services</a></li>
+                <li><a href="/case-studies/">Case Studies</a></li>
                 <li><a href="/publications/">Publications</a></li>
                 <li><a href="/contact/">Contact</a></li>
                 <li><a href="https://witjes.dk/login" target="_blank">Login</a></li>
