--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -291,12 +291,11 @@
                 <a href="/" class="logo">Metiri Consult</a>
             </div>
             <ul class="nav-menu">
-                <li><a href="/about/">About</a></li>
                 <li><a href="/services/">Services</a></li>
                 <li><a href="/case-studies/">Case Studies</a></li>
-                <li><a href="/docs/CV2025.pdf">CV</a></li>
                 <li><a href="/publications/">Publications</a></li>
                 <li><a href="/contact/">Contact</a></li>
+                <li><a href="https://witjes.dk/login" target="_blank">Login</a></li>
             </ul>
         </nav>
     </header>
