--- a/layouts/index.html
+++ b/layouts/index.html
@@ -372,6 +372,7 @@
             </div>
             <ul class="nav-menu">
                 <li><a href="/services/">Services</a></li>
+                <li><a href="/case-studies/">Case Studies</a></li>
                 <li><a href="/publications/">Publications</a></li>
                 <li><a href="/contact/">Contact</a></li>
                 <li><a href="https://witjes.dk/login" target="_blank">Login</a></li>
@@ -484,4 +485,5 @@
     </footer>
 </body>
 </html>
-</html>
+
+)
