--- a/layouts/page/contact.html
+++ b/layouts/page/contact.html
@@ -296,6 +296,7 @@
             </div>
             <ul class="nav-menu">
                 <li><a href="/services/">Services</a></li>
+                <li><a href="/case-studies/">Case Studies</a></li>
                 <li><a href="/publications/">Publications</a></li>
                 <li><a href="/contact/" class="active">Contact</a></li>
                 <li><a href="https://witjes.dk/login" target="_blank">Login</a></li>
