--- a/layouts/page/publications.html
+++ b/layouts/page/publications.html
@@ -410,6 +410,7 @@
             </div>
             <ul class="nav-menu">
                 <li><a href="/services/">Services</a></li>
+                <li><a href="/case-studies/">Case Studies</a></li>
                 <li><a href="/publications/" class="active">Publications</a></li>
                 <li><a href="/contact/">Contact</a></li>
                 <li><a href="https://witjes.dk/login" target="_blank">Login</a></li>
