Analytics to cover all pages.

--- a/layouts/page/publications.html
+++ b/layouts/page/publications.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ .Title }} - Metiri Consult</title>
+    
+    <!-- Google Analytics -->
+    {{ template "_internal/google_analytics.html" . }}
+    
     <style>
         /* Same base styles as other pages */
         * {
