--- a/layouts/page/services.html
+++ b/layouts/page/services.html
@@ -234,6 +234,7 @@
                     <div class="benefits-box">
                         <h4>Research Contributions</h4>
                         <ul class="feature-list">
+                            <li>Governing Board Member, Judicial Administration Research Association (JARA)</li>
                             <li>Academic publications in peer-reviewed journals</li>
                             <li>Conference presentations and workshops</li>
                             <li>Collaborative studies with universities</li>
