--- a/layouts/index.html
+++ b/layouts/index.html
@@ -114,6 +114,10 @@
                     <div class="stat-number">20+</div>
                     <div class="stat-label">Years Experience</div>
                 </div>
+                <div class="stat-item">
+                    <div class="stat-number">JARA</div>
+                    <div class="stat-label">Governing Board Member</div>
+                </div>
             </div>
         </div>
     </section>
