--- a/layouts/index.html
+++ b/layouts/index.html
@@ -114,10 +114,10 @@
                     <div class="stat-number">20+</div>
                     <div class="stat-label">Years Experience</div>
                 </div>
-                <div class="stat-item">
+                <a href="https://jar-association.eu/" target="_blank" class="stat-item" style="text-decoration: none; color: inherit; cursor: pointer;">
                     <div class="stat-number">JARA</div>
                     <div class="stat-label">Governing Board Member</div>
-                </div>
+                </a>
             </div>
         </div>
     </section>
